--- a/accessories.html
+++ b/accessories.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Joy4 Merch</title>
+  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/home.css">
   <style type="text/css">
     .main {
       max-width: 1180px;
@@ -157,76 +157,76 @@
         "img": "./asset/accessories/2-backpack.jpg",
         "title": "Backpack"
       },{
-        "img": "./asset/accessories/2-drawstring bag.jpg",
+        "img": "./asset/accessories/2-drawstring-bag.jpg",
         "title": "Drawstring bag"
       },{
-        "img": "./asset/accessories/2-Fanny packs.jpg",
+        "img": "./asset/accessories/2-Fanny-packs.jpg",
         "title": "Fanny packs"
       },{
-        "img": "./asset/accessories/2-shoulder bags.png",
+        "img": "./asset/accessories/2-shoulder-bags.png",
         "title": "Shoulder bags"
       },{
         "img": "./asset/accessories/2-tote.jpg",
         "title": "Tote"
       },{
-        "img": "./asset/accessories/3-chenille patches.jpg",
+        "img": "./asset/accessories/3-chenille-patches.jpg",
         "title": "Chenille patches"
       },{
-        "img": "./asset/accessories/3-embroidery patches.jpg",
+        "img": "./asset/accessories/3-embroidery-patches.jpg",
         "title": "Embroidery patches"
       },{
-        "img": "./asset/accessories/3-printed patches.jpg",
+        "img": "./asset/accessories/3-printed-patches.jpg",
         "title": "Printed patches"
       },{
-        "img": "./asset/accessories/3-woven patches (1).jpg",
+        "img": "./asset/accessories/3-woven-patches-1.jpg",
         "title": "Woven patches"
       },{
-        "img": "./asset/accessories/3-woven patches (2).jpg",
+        "img": "./asset/accessories/3-woven-patches-2.jpg",
         "title": "Woven patches"
       },{
-        "img": "./asset/accessories/4-hard enamel pins.jpg",
+        "img": "./asset/accessories/4-hard-enamel-pins.jpg",
         "title": "Hard enamel pins"
       },{
-        "img": "./asset/accessories/4-leather keychain.jpg",
+        "img": "./asset/accessories/4-leather-keychain.jpg",
         "title": "Leather keychain"
       },{
-        "img": "./asset/accessories/4-leather patches.jpg",
+        "img": "./asset/accessories/4-leather-patches.jpg",
         "title": "Leather patches"
       },{
-        "img": "./asset/accessories/4-PVC patches.jpg",
+        "img": "./asset/accessories/4-PVC-patches.jpg",
         "title": "PVC patches"
       },{
-        "img": "./asset/accessories/4-soft enamel pins.jpg",
+        "img": "./asset/accessories/4-soft-enamel-pins.jpg",
         "title": "Soft enamel pins"
       },{
-        "img": "./asset/accessories/5-acrylic keychain.jpg",
+        "img": "./asset/accessories/5-acrylic-keychain.jpg",
         "title": "Acrylic keychain"
       },{
-        "img": "./asset/accessories/5-embroidery keychains.jpg",
+        "img": "./asset/accessories/5-embroidery-keychains.jpg",
         "title": "Embroidery keychains"
       },{
-        "img": "./asset/accessories/5-metal keychain.jpg",
+        "img": "./asset/accessories/5-metal-keychain.jpg",
         "title": "Metal keychain"
       },{
-        "img": "./asset/accessories/5-PVC keychain.jpg",
+        "img": "./asset/accessories/5-PVC-keychain.jpg",
         "title": "PVC keychain"
       },{
-        "img": "./asset/accessories/5-woven keychain.jpg",
+        "img": "./asset/accessories/5-woven-keychain.jpg",
         "title": "Woven keychain"
       },{
-        "img": "./asset/accessories/6-flag (1).jpg",
+        "img": "./asset/accessories/6-flag-1.jpg",
         "title": "Poster flag"
       },{
-        "img": "./asset/accessories/6-flag (2).jpg",
+        "img": "./asset/accessories/6-flag-2.jpg",
         "title": "Poster flag"
       },{
-        "img": "./asset/accessories/6-stickers (1).jpg",
+        "img": "./asset/accessories/6-stickers-1.jpg",
         "title": "Stickers"
       },{
-        "img": "./asset/accessories/6-stickers (2).jpg",
+        "img": "./asset/accessories/6-stickers-2.jpg",
         "title": "Stickers"
       },{
-        "img": "./asset/accessories/6-stickers (3).jpg",
+        "img": "./asset/accessories/6-stickers-3.jpg",
         "title": "Stickers"
       },{
         "img": "./asset/accessories/7-Bracelets.jpg",
