--- a/apparel.html
+++ b/apparel.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Joy4 Merch</title>
+  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/home.css">
   <style type="text/css">
     .main {
       max-width: 1180px;
@@ -139,28 +139,28 @@
   <script type="text/javascript">
     (function name(params) {
       let listData = [{
-        "img": "./asset/apparel/1-t-shirt (1).jpg",
+        "img": "./asset/apparel/1-t-shirt-1.jpg",
         "title": "T-shirt"
       }, {
-        "img": "./asset/apparel/1-t-shirt (2).jpg",
+        "img": "./asset/apparel/1-t-shirt-2.jpg",
         "title": "T-shirt"
       }, {
-        "img": "./asset/apparel/1-Polo shirt.jpg",
+        "img": "./asset/apparel/1-Polo-shirt.jpg",
         "title": "Polo shirt"
       }, {
-        "img": "./asset/apparel/1-long shirt.jpg",
+        "img": "./asset/apparel/1-long-shirt.jpg",
         "title": "Long shirt"
       }, {
         "img": "./asset/apparel/1-sweatshirt.jpg",
         "title": "Sweatshirt"
       }, {
-        "img": "./asset/apparel/2-hoodie 03 (1).jpg",
+        "img": "./asset/apparel/2-hoodie-03-1.jpg",
         "title": "Hoodie"
       }, {
-        "img": "./asset/apparel/2-hoodie 03 (3).jpg",
+        "img": "./asset/apparel/2-hoodie-03-3.jpg",
         "title": "Hoodie"
       }, {
-        "img": "./asset/apparel/2-zipper hoodie.jpg",
+        "img": "./asset/apparel/2-zipper-hoodie.jpg",
         "title": "Zipper hoodie"
       }, {
         "img": "./asset/apparel/2-sweatshirt.jpg",
@@ -169,19 +169,19 @@
         "img": "./asset/apparel/2-jacket.jpg",
         "title": "Jacket"
       }, {
-        "img": "./asset/apparel/3-bomber jacket  (1).jpg",
+        "img": "./asset/apparel/3-bomber-jacket-1.jpg",
         "title": "Bomber jacket"
       }, {
-        "img": "./asset/apparel/3-bomber jacket  (2).jpg",
+        "img": "./asset/apparel/3-bomber-jacket-2.jpg",
         "title": "Bomber jacket"
       }, {
         "img": "./asset/apparel/3-jacket.jpg",
         "title": "Jacket"
       }, {
-        "img": "./asset/apparel/3-short (1).jpg",
+        "img": "./asset/apparel/3-short-1.jpg",
         "title": "Short"
       }, {
-        "img": "./asset/apparel/3-short (2).jpg",
+        "img": "./asset/apparel/3-short-2.jpg",
         "title": "Short"
       }, {
         "img": "./asset/apparel/4-jogger.jpg",
@@ -190,28 +190,28 @@
         "img": "./asset/apparel/4-leggings.jpg",
         "title": "Leggings"
       }, {
-        "img": "./asset/apparel/4-sweater (1).jpg",
+        "img": "./asset/apparel/4-sweater-1.jpg",
         "title": "Christmas Sweater"
       }, {
-        "img": "./asset/apparel/4-sweater (2).jpg",
+        "img": "./asset/apparel/4-sweater-2.jpg",
         "title": "Christmas Sweater"
       }, {
-        "img": "./asset/apparel/4-sweater (3).jpg",
+        "img": "./asset/apparel/4-sweater-3.jpg",
         "title": "Sweater"
       }, {
-        "img": "./asset/apparel/5-swimwear (1).jpg",
+        "img": "./asset/apparel/5-swimwear-1.jpg",
         "title": "Swimwear"
       }, {
-        "img": "./asset/apparel/5-swimwear (2).jpg",
+        "img": "./asset/apparel/5-swimwear-2.jpg",
         "title": "Swimwear"
       }, {
-        "img": "./asset/apparel/5-swimwear (3).jpg",
+        "img": "./asset/apparel/5-swimwear-3.jpg",
         "title": "Swimwear"
       }, {
-        "img": "./asset/apparel/5-legging (1).jpg",
+        "img": "./asset/apparel/5-legging-1.jpg",
         "title": "Legging"
       }, {
-        "img": "./asset/apparel/5-legging (2).jpg",
+        "img": "./asset/apparel/5-legging-2.jpg",
         "title": "Legging"
       }];
 
