--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Joy4 Merch</title>
+  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
