--- a/headwear.html
+++ b/headwear.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Joy4 Merch</title>
+  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/home.css">
   <style type="text/css">
     .main {
       max-width: 1180px;
@@ -140,73 +140,73 @@
   <script type="text/javascript">
     (function name(params) {
       let listData = [{
-        "img": "./asset/headwear/1-snapback (1).jpg",
+        "img": "./asset/headwear/1-snapback-1.jpg",
         "title": "Snapback"
       }, {
-        "img": "./asset/headwear/1-snapback (2).jpg",
+        "img": "./asset/headwear/1-snapback-2.jpg",
         "title": "Snapback"
       }, {
-        "img": "./asset/headwear/1-snapback (3).jpg",
+        "img": "./asset/headwear/1-snapback-3.jpg",
         "title": "Snapback"
       }, {
-        "img": "./asset/headwear/1-snapback (4).jpg",
+        "img": "./asset/headwear/1-snapback-4.jpg",
         "title": "Snapback"
       }, {
-        "img": "./asset/headwear/1- 5 panel hat.png",
+        "img": "./asset/headwear/1-5-panel-hat.png",
         "title": "5 Panel hat"
       }, {
-        "img": "./asset/headwear/2-baseball hat (1).jpg",
+        "img": "./asset/headwear/2-baseball-hat-1.jpg",
         "title": "Baseball hat"
       }, {
-        "img": "./asset/headwear/2-baseball hat (2).jpg",
+        "img": "./asset/headwear/2-baseball-hat-2.jpg",
         "title": "Baseball hats"
       }, {
-        "img": "./asset/headwear/2-dad hat (1).jpg",
+        "img": "./asset/headwear/2-dad-hat-1.jpg",
         "title": "Dad hat"
       }, {
-        "img": "./asset/headwear/2-dad hat (2).jpg",
+        "img": "./asset/headwear/2-dad-hat-2.jpg",
         "title": "Dad hats"
       }, {
-        "img": "./asset/headwear/2-dad hat (3).jpg",
+        "img": "./asset/headwear/2-dad-hat-3.jpg",
         "title": "Dad hat"
       }, {
-        "img": "./asset/headwear/3-bucket hat (1).jpg",
+        "img": "./asset/headwear/3-bucket-hat-1.jpg",
         "title": "Bucket hat"
       }, {
-        "img": "./asset/headwear/3-bucket hat (2).jpg",
+        "img": "./asset/headwear/3-bucket-hat-2.jpg",
         "title": "Bucket hat"
       }, {
-        "img": "./asset/headwear/3-trucker hat (1).png",
+        "img": "./asset/headwear/3-trucker-hat-1.png",
         "title": "Trucker hats"
       }, {
-        "img": "./asset/headwear/3-trucker hat (2).png",
+        "img": "./asset/headwear/3-trucker-hat-2.png",
         "title": "Trucker hat"
       }, {
-        "img": "./asset/headwear/3-trucker hat (3).png",
+        "img": "./asset/headwear/3-trucker-hat-3.png",
         "title": "Mesh hat"
       }, {
-        "img": "./asset/headwear/4-beanies (1).jpg",
+        "img": "./asset/headwear/4-beanies-1.jpg",
         "title": "Beanie"
       }, {
-        "img": "./asset/headwear/4-beanies (2).jpg",
+        "img": "./asset/headwear/4-beanies-2.jpg",
         "title": "Beanie"
       }, {
-        "img": "./asset/headwear/4-bucket hat .jpg",
+        "img": "./asset/headwear/4-bucket-hat.jpg",
         "title": "Bucket hat"
       }, {
-        "img": "./asset/headwear/4-pompom beanie (1).jpg",
+        "img": "./asset/headwear/4-pompom-beanie-1.jpg",
         "title": "POMPOM Beanie"
       }, {
-        "img": "./asset/headwear/4-pompom beanie (2).jpg",
+        "img": "./asset/headwear/4-pompom-beanie-2.jpg",
         "title": "POMPOM Beanie"
       }, {
-        "img": "./asset/headwear/5-bandana (1).jpg",
+        "img": "./asset/headwear/5-bandana-1.jpg",
         "title": "Bandana"
       }, {
-        "img": "./asset/headwear/5-bandana (2).jpg",
+        "img": "./asset/headwear/5-bandana-2.jpg",
         "title": "Bandana"
       }, {
-        "img": "./asset/headwear/5-bandana (3).jpg",
+        "img": "./asset/headwear/5-bandana-3.jpg",
         "title": "Bandana"
       }, {
         "img": "./asset/headwear/5-scarf.jpg",
