--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Joy4 Merch</title>
+  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/common.css">
   <style type="text/css">
