--- a/techniques.html
+++ b/techniques.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <title>Joy4 Merch</title>
+  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/all.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/home.css">
   <style type="text/css">
     .main {
       max-width: 1180px;
