--- a/home.html
+++ b/home.html
@@ -61,13 +61,13 @@
       </p>
       <p>Joy4 Merch LLC aims at providing merchandises service worldwide.</p>
       <p>We manage your merchandising needs to help you focus on growing your business.</p>
-      <p>Let’s make merch joyful!</p>
+      <p>Let's make merch joyful!</p>
     </div>
   </div>
   <div class="footer">
     <div class="links">
       <h4>LINKS</h4>
-      <p>© 2022, Joy4 Merch LLC.</p>
+      <p>© 2023, Joy4 Merch LLC.</p>
     </div>
     <div class="follw">
       <h4>FOLLOW US</h4>
