--- a/accessories.html
+++ b/accessories.html
@@ -86,7 +86,7 @@
   <div class="footer">
     <div class="links">
       <h4>LINKS</h4>
-      <p>© 2022, Joy4 Merch LLC.</p>
+      <p>© 2023, Joy4 Merch LLC.</p>
     </div>
     <div class="follw">
       <h4>FOLLOW US</h4>
@@ -140,10 +140,10 @@
     (function name(params) {
       let listData = [{
         "img": "./asset/accessories/1-slides.jpg",
-        "title": "Socks"
+        "title": "Slides"
       },{
         "img": "./asset/accessories/1-slides.png",
-        "title": "Socks"
+        "title": "Slides"
       },{
         "img": "./asset/accessories/1-slippers.jpg",
         "title": "Slippers"
