--- a/contactus.html
+++ b/contactus.html
@@ -72,8 +72,8 @@
     <div class="us">
      <h2>CONTACT DETAILS</h2>
      <P>Email:&nbsp;&nbsp;<a href="mailto:joy4merch@gmail.com">joy4merch@gmail.com</a></P>
-     <P>Address:&nbsp;&nbsp;Room 1512,</P>
-     <p style="margin-left: 7%;">Junye Building,#676 Houjie Guantai Street,</p>
+     <P>Address:&nbsp;&nbsp;Room 1512 Junye Building,</P>
+     <p style="margin-left: 7%;">#676 Houjie Guantai Street,</p>
      <p style="margin-left: 7%;">Dongguan Guangdong, 523957 China</p>
      <p><a class="link" href="mailto:joy4merch@gmail.com">Send email to Joy4 Merch</a></p>
     </div>
