--- a/home.html
+++ b/home.html
@@ -1,122 +1,215 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
 
 <head>
-  <meta charset="utf-8" />
-  <title>Joy4 Merch</title>
-  <link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="./css/all.css">
-  <link rel="stylesheet" href="./css/common.css">
-  <style type="text/css">
-    .main {
-      padding: 20px 0 20px;
-    }
-
-    .main .image {
-      text-align: center;
-    }
-
-    .main img {
-      width: 100%;
-    }
-
-    .main .about {
-      text-align: center;
-      margin: 20px 0 40px;
-    }
-
-    .about h2 {
-      font-size: 24px;
-      font-weight: 600;
-    }
-
-    .about p {
-      padding: 6px 0;
-    }
-  </style>
+	<title>Joyful Merch</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="icon" href="favicon.ico" mce_href="favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
 </head>
 
-<body>
-  <div class="header">
-    <div class="logo">
-      <img src="./asset/logo.png" alt="" srcset="">
-    </div>
-    <div class="nae">
-      <ul>
-        <li><a href="home.html">HOME</a></li>
-        <li><a href="apparel.html">APPAREL</a></li>
-        <li><a href="headwear.html">HEADWEAR</a></li>
-        <li><a href="accessories.html">ACCESSORIES</a></li>
-        <li><a href="techniques.html">TECHNIQUES</a></li>
-        <li><a href="contactus.html">CONTACT US</a></li>
-      </ul>
-    </div>
-  </div>
-  <div class="main">
-    <div class="image"><img src="./asset/long.png" alt=""></div>
-    <div class="about">
-      <h2>ABOUT US</h2>
-      <p>Joy4 Merch LLC is a one-stop customizing apparels and accessories company,</p>
-      <p>which was established by four friends who are experienced in both sourcing and production for over ten years.
-      </p>
-      <p>Joy4 Merch LLC aims at providing merchandises service worldwide.</p>
-      <p>We manage your merchandising needs to help you focus on growing your business.</p>
-      <p>Let's make merch joyful!</p>
-    </div>
-  </div>
-  <div class="footer">
-    <div class="links">
-      <h4>LINKS</h4>
-      <p>© 2023, Joy4 Merch LLC.</p>
-    </div>
-    <div class="follw">
-      <h4>FOLLOW US</h4>
-      <ul>
-        <li>
-          <a href="https://www.facebook.com" title="Joy4 Merch on Facebook">
-            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-facebook"
-              viewBox="0 0 32 32">
-              <path fill="#444"
-                d="M18.222 11.556V8.91c0-1.194.264-1.799 2.118-1.799h2.326V2.667h-3.882c-4.757 0-6.326 2.181-6.326 5.924v2.965H9.333V16h3.125v13.333h5.764V16h3.917l.528-4.444h-4.444z">
-              </path>
-            </svg>
-          </a>
-        </li>
-        <li>
-          <a href="https://twitter.com" title="Joy4 Merch on Twitter">
-            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-twitter" viewBox="0 0 32 32">
-              <path fill="#444"
-                d="M30.75 6.844c-1.087.481-2.25.806-3.475.956a6.079 6.079 0 0 0 2.663-3.35 12.02 12.02 0 0 1-3.844 1.469A6.044 6.044 0 0 0 21.675 4a6.052 6.052 0 0 0-6.05 6.056c0 .475.05.938.156 1.381A17.147 17.147 0 0 1 3.306 5.106a6.068 6.068 0 0 0 1.881 8.088c-1-.025-1.938-.3-2.75-.756v.075a6.056 6.056 0 0 0 4.856 5.937 6.113 6.113 0 0 1-1.594.212c-.388 0-.769-.038-1.138-.113a6.06 6.06 0 0 0 5.656 4.206 12.132 12.132 0 0 1-8.963 2.507A16.91 16.91 0 0 0 10.516 28c11.144 0 17.231-9.231 17.231-17.238 0-.262-.006-.525-.019-.781a12.325 12.325 0 0 0 3.019-3.138z">
-              </path>
-            </svg>
-          </a>
-        </li>
-        <!-- <li>
-          <a href="https://www.instagram.com" title="Joy4 Merch on Instagram">
-            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-instagram"
-              viewBox="0 0 512 512">
-              <path
-                d="M256 49.5c67.3 0 75.2.3 101.8 1.5 24.6 1.1 37.9 5.2 46.8 8.7 11.8 4.6 20.2 10 29 18.8s14.3 17.2 18.8 29c3.4 8.9 7.6 22.2 8.7 46.8 1.2 26.6 1.5 34.5 1.5 101.8s-.3 75.2-1.5 101.8c-1.1 24.6-5.2 37.9-8.7 46.8-4.6 11.8-10 20.2-18.8 29s-17.2 14.3-29 18.8c-8.9 3.4-22.2 7.6-46.8 8.7-26.6 1.2-34.5 1.5-101.8 1.5s-75.2-.3-101.8-1.5c-24.6-1.1-37.9-5.2-46.8-8.7-11.8-4.6-20.2-10-29-18.8s-14.3-17.2-18.8-29c-3.4-8.9-7.6-22.2-8.7-46.8-1.2-26.6-1.5-34.5-1.5-101.8s.3-75.2 1.5-101.8c1.1-24.6 5.2-37.9 8.7-46.8 4.6-11.8 10-20.2 18.8-29s17.2-14.3 29-18.8c8.9-3.4 22.2-7.6 46.8-8.7 26.6-1.3 34.5-1.5 101.8-1.5m0-45.4c-68.4 0-77 .3-103.9 1.5C125.3 6.8 107 11.1 91 17.3c-16.6 6.4-30.6 15.1-44.6 29.1-14 14-22.6 28.1-29.1 44.6-6.2 16-10.5 34.3-11.7 61.2C4.4 179 4.1 187.6 4.1 256s.3 77 1.5 103.9c1.2 26.8 5.5 45.1 11.7 61.2 6.4 16.6 15.1 30.6 29.1 44.6 14 14 28.1 22.6 44.6 29.1 16 6.2 34.3 10.5 61.2 11.7 26.9 1.2 35.4 1.5 103.9 1.5s77-.3 103.9-1.5c26.8-1.2 45.1-5.5 61.2-11.7 16.6-6.4 30.6-15.1 44.6-29.1 14-14 22.6-28.1 29.1-44.6 6.2-16 10.5-34.3 11.7-61.2 1.2-26.9 1.5-35.4 1.5-103.9s-.3-77-1.5-103.9c-1.2-26.8-5.5-45.1-11.7-61.2-6.4-16.6-15.1-30.6-29.1-44.6-14-14-28.1-22.6-44.6-29.1-16-6.2-34.3-10.5-61.2-11.7-27-1.1-35.6-1.4-104-1.4z">
-              </path>
-              <path
-                d="M256 126.6c-71.4 0-129.4 57.9-129.4 129.4s58 129.4 129.4 129.4 129.4-58 129.4-129.4-58-129.4-129.4-129.4zm0 213.4c-46.4 0-84-37.6-84-84s37.6-84 84-84 84 37.6 84 84-37.6 84-84 84z">
-              </path>
-              <circle cx="390.5" cy="121.5" r="30.2"></circle>
-            </svg>
-          </a>
-        </li> -->
-        <li>
-          <a href="https://www.youtube.com" title="Joy4 Merch on YouTube">
-            <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-youtube" viewBox="0 0 33 32">
-              <path fill="#444"
-                d="M-.314 25.286q0 1.969 1.299 3.347t3.163 1.378h23.913q1.864 0 3.163-1.378t1.299-3.347V6.256q0-1.969-1.313-3.386t-3.15-1.417H4.147q-1.837 0-3.15 1.417T-.316 6.256v19.03zm11.944-3.439V9.694q0-.184.105-.289.079-.026.131-.026l.131.026 11.444 6.09q.105.105.105.262 0 .105-.105.21l-11.444 6.09q-.052.052-.105.052-.105 0-.158-.052-.105-.105-.105-.21z">
-              </path>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+<body class="is-preload">
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<!-- <span class="logo"><img style="width: 85px; height: 85px;" src="images/logo1.png" alt="" /></span> -->
+			<h1>JOYFUL MERCH LIMITED</h1>
+			<p>One stop sourcing of apparel and accessories<br />
+				email by <a href="mailto:joy4merch@gmail.com">joy4merch@gmail.com</a>
+			</p>
+		</header>
+
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="#about" class="active">ABOUT US</a></li>
+				<li><a href="#apparel">APPAREL</a></li>
+				<li><a href="#headwear">HEADWEAR</a></li>
+				<li><a href="#accessories">ACCESSORIES</a></li>
+			</ul>
+		</nav>
+
+		<!-- Main -->
+		<div id="main">
+
+			<!-- About -->
+			<section id="about" class="main">
+				<div class="spotlight">
+					<div class="content">
+						<header class="major">
+							<h2>About us</h2>
+						</header>
+						<p>Joyful Merch is a merchandise supplier specialized in the research, development and production of apparel and accessories. We are located in Dongguan with convenient transportation access. All of our products comply with international quality standards and are greatly appreciated in a variety of different markets throughout the world.</br>If you are interested in any of our products or would like to discuss a custom order, please feel free to contact us. We are looking forward to forming successful business relationships with new clients around the world in the near future.</br>Let's make merch joyful!<br /><br />
+							email by <a href="mailto:joy4merch@gmail.com">joy4merch@gmail.com</a></p>
+						<ul class="actions">
+							<li><a href="techniques.html" class="button">Techniques</a></li>
+						</ul>
+					</div>
+					<span class="image"><img src="images/logo.svg" alt="" /></span>
+				</div>
+			</section>
+
+			<!-- Apparel Section -->
+			<section id="apparel" class="main special">
+				<header class="major">
+					<h2>Apparel</h2>
+				</header>
+				<ul class="features">
+					<li>
+						<div><img style="width: 80%;" src="images/apparel/1-t-shirt-1.jpg" alt=""></div>
+						<h3>T-shirt</h3>
+						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
+					</li>
+					<li>
+						<div><img style="width: 80%;" src="images/apparel/2-hoodie-03-1.jpg" alt=""></div>
+						<h3>Hoodie</h3>
+						<!-- <p>introduce introduce introduce .</p> -->
+					</li>
+					<li>
+						<div><img style="width: 80%;" src="images/apparel/3-bomber-jacket-2.jpg" alt=""></div>
+						<h3>Bomber jacket</h3>
+						<!-- <p>introduce introduce introduce .</p> -->
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="apparel.html" class="button">Learn More</a></li>
+					</ul>
+				</footer>
+			</section>
+
+			<!-- Headwear Section -->
+			<section id="headwear" class="main special">
+				<header class="major">
+					<h2>Headwear</h2>
+					<!-- <p>explain explain explain explain explain explain explain <br />
+						explain explain explain explain explain .</p> -->
+				</header>
+				<ul class="features">
+					<li>
+						<div><img style="width: 80%;" src="./images/headwear/1-snapback-3.jpg" alt=""></div>
+						<h3>Snapback</h3>
+						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
+					</li>
+					<li>
+						<div><img style="width: 80%;" src="./images/headwear/2-dad-hat-2.jpg" alt=""></div>
+						<h3>Dad hats</h3>
+						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
+					</li>
+					<li>
+						<div><img style="width: 80%;" src="./images/headwear/4-pompom-beanie-1.jpg" alt=""></div>
+						<h3>POMPOM Beanie</h3>
+						<!-- <p>introduce introduce introduce .introduce introduce introduce .</p> -->
+					</li>
+				</ul>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="headwear.html" class="button">Learn More</a></li>
+					</ul>
+				</footer>
+			</section>
+
+			<!-- Accessories Section -->
+			<section id="accessories" class="main special">
+				<header class="major">
+					<h2>Accessories</h2>
+					<!-- <p>explain explain explain explain explain explain explain <br />
+						explain explain explain explain explain .</p> -->
+				</header>
+				<ul class="statistics">
+					<li class="style1">
+						<div><img style="width: 80%;" src="./images/accessories/1-socks.jpg" alt=""></div>
+						<h3>Socks</h3>
+					</li>
+					<li class="style2">
+						<div><img style="width: 80%;" src="./images/accessories/2-shoulder-bags.png" alt=""></div>
+						<h3>Shoulder bags</h3>
+					</li>
+					<li class="style3">
+						<div><img style="width: 80%;" src="./images/accessories/4-PVC-patches.jpg" alt=""></div>
+						<h3>PVC patches</h3>
+					</li>
+					<!-- <li class="style1">
+						<div><img style="width: 80%;" src="./images/accessories/1-socks.jpg" alt=""></div>
+						<span>Socks</span>
+					</li> -->
+				</ul>
+				<!-- <p class="content">explain explain explain explain explain explain explain explain explain explain</p> -->
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="accessories.html" class="button">Learn More</a></li>
+					</ul>
+				</footer>
+			</section>
+
+			
+			<!-- Other Section -->
+			<section id="other" class="main special">
+				<header class="major">
+					<h2>Other</h2>
+					<p>We use the latest techniques to create our products.</p>
+				</header>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="techniques.html" class="button">Learn More</a></li>
+						<li><a href="mailto:joy4merch@gmail.com" class="button primary">Send email to
+								joy4merch@gmail.com</a></li>
+					</ul>
+				</footer>
+			</section>
+
+		</div>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<section>
+				<h2>Hours of Operation</h2>
+				<p>Monday — Friday</br> 9:00 am — 6:00 pm</br></br>Saturday — Sunday </br>closed</p>
+				<ul class="actions">
+					<li><a href="techniques.html" class="button">Learn More</a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Contact Us</h2>
+				<dl class="alt">
+					<dt>Address</dt>
+					<dd>Room 1416 Dongfang Building A, </br> #105 Taian Street, </br> Dongguan Guangdong, 523925 China
+					</dd>
+					<!-- <dt>Phone</dt>
+					<dd>(000) 000-0000 x 0000</dd> -->
+					<dt>Email</dt>
+					<dd><a href="mailto:joy4merch@gmail.com">joy4merch@gmail.com</a></dd>
+				</dl>
+				<ul class="icons">
+					<li><a href="#" class="icon brands fa-twitter alt"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
+					<!-- <li><a href="#" class="icon brands fa-github alt"><span class="label">GitHub</span></a></li> -->
+					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
+				</ul>
+			</section>
+			<p class="copyright">&copy; 2023, Joyful Merch Limited.</p>
+			<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
+		</footer>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
