--- a/about.html
+++ b/about.html
@@ -20,8 +20,11 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<span class="logo"><img style="width: 85px; height: 85px;" src="images/logo1.png" alt="" /></span>
-			<p>Joyful Merch offers various techniques for you to choose from.</p>
+			<!-- <h1>JOYFUL MERCH LIMITED</h1> -->
 		</header>
+		<div>
+			<img src="./images/long.png" alt="" style="width: 100%;" />
+		</div>
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
@@ -29,8 +32,8 @@
 				<li><a href="apparel.html">APPAREL</a></li>
 				<li><a href="headwear.html">HEADWEAR</a></li>
 				<li><a href="accessories.html">ACCESSORIES</a></li>
-				<li><a href="techniques.html" class="active">TECHNIQUES</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
+				<li><a href="techniques.html">TECHNIQUES</a></li>
+				<li><a href="about.html" class="active">ABOUT US</a></li>
 			</ul>
 		</nav>
 
@@ -40,75 +43,26 @@
 			<!-- Content -->
 			<section id="content" class="main">
 				<!-- <span class="image main"><img src="./images/long.png" alt="" /></span> -->
-				<h2 style="text-align: left;">Embroidery</h2>
-				<div class="row">
-					<div style="width: 50%;"><img style="width: 100%;" src="images/techniques/embroidery.jpg" alt="">
-					</div>
-					<div style="width: 50%;">
-						<p class="content">
-							</br>Embroidery is always combination of old school and new styles.
-							</br>
-							Joy4 Merch offers the embroidery techs as follows:
-							</br>
-							- flat embroidery
-							</br>
-							- 3D embroidery
-							</br>
-							- chenille embroidery
-							</br>
-							- sequin
-							</br>
-							- and etc.
-						</p>
-					</div>
-				</div>
-				<h2 style="text-align: left;">Jacquard</h2>
-				<div class="row">
-					<div style="width: 50%;"><img style="width: 100%;" src="images/techniques/printing.jpg" alt="">
-					</div>
-					<div style="width: 50%;">
-						<p class="content">
-							</br>Printing is popular!
-							</br>
-							Joy4 Merch offers printing techs as follows:
-							</br>
-							- screen printing
-							</br>
-							- digital printing
-							</br>
-							- heat transfer printing
-							</br>
-							- 3D printing
-							</br>
-							- tie dye printing
-							</br>
-							- and etc.
-						</p>
-					</div>
-				</div>
-				<h2 style="text-align: left;">Jacquard</h2>
-				<div class="row">
-					<div style="width: 50%;"><img style="width: 100%;" src="images/techniques/jacquard.jpg" alt="">
-					</div>
-					<div style="width: 50%;">
-						<p class="content">
-							</br>Jacquard is widely used. Joy4 Merch offer you as follows:
-							</br>
-							- sweaters
-							</br>
-							- scarfs
-							</br>
-							- socks
-							</br>
-							- beanies
-							</br>
-							- and etc.
-						</p>
-					</div>
-				</div>
+				<h2>About Us</h2>
+				<p>Joyful Merch is a merchandise supplier specialized in the research, development and production of
+					apparel and accessories. We are located in Dongguan with convenient transportation access. All of
+					our products comply with international quality standards and are greatly appreciated in a variety of
+					different markets throughout the world.</br>If you are interested in any of our products or would
+					like to discuss a custom order, please feel free to contact us. We are looking forward to forming
+					successful business relationships with new clients around the world in the near future.</br>Let's
+					make merch joyful!<br /><br />
+					email by <a href="mailto:joy4merch@gmail.com">joy4merch@gmail.com</a></p>
+				<footer class="major">
+					<ul class="actions special">
+						<li><a href="mailto:joy4merch@gmail.com" class="button primary">Send email to
+								joy4merch@gmail.com</a></li>
+						<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
+					</ul>
+				</footer>
 			</section>
+
 			<!-- Other Section -->
-			<section id="other" class="main special">
+			<!-- <section id="other" class="main special">
 				<header class="major">
 					<h2>Warm tip</h2>
 					<p>For most items, the MOQ is 100pcs same colorways each design, and it's ok to custom the material,
@@ -118,10 +72,10 @@
 					<ul class="actions special">
 						<li><a href="mailto:joy4merch@gmail.com" class="button primary">Send email to
 								joy4merch@gmail.com</a></li>
-						<!-- <li><a href="generic.html" class="button">Learn More</a></li> -->
+						<li><a href="generic.html" class="button">Learn More</a></li>
 					</ul>
 				</footer>
-			</section>
+			</section> -->
 
 		</div>
 
