--- a/accessories.html
+++ b/accessories.html
@@ -18,17 +18,28 @@
 	<div id="wrapper">
 
 		<!-- Header -->
-		<header id="header">
-			<h1>Accessories</h1>
+		<header id="header" class="alt">
+			<span class="logo"><img style="width: 85px; height: 85px;" src="images/logo1.png" alt="" /></span>
 			<p>Providing high-quality clothing, accessories, shoes, and jewelry for men, women, and kids.</br>We offer a wide range of products, including clothing, accessories, shoes, and jewelry, and we are always ready to serve you.</p>
 		</header>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="home.html">HOME</a></li>
+				<li><a href="apparel.html">APPAREL</a></li>
+				<li><a href="headwear.html">HEADWEAR</a></li>
+				<li><a href="accessories.html" class="active">ACCESSORIES</a></li>
+				<li><a href="techniques.html">TECHNIQUES</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
+			</ul>
+		</nav>
 
 		<!-- Main -->
 		<div id="main">
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="./images/long.png" alt="" /></span>
+				<!-- <span class="image main"><img src="./images/long.png" alt="" /></span> -->
 				<div id="list">
 					<!-- <h2 style="text-align: left;">T-shirt</h2>
 					<ul class="features" style="text-align: center;">
