--- a/apparel.html
+++ b/apparel.html
@@ -18,18 +18,29 @@
 	<div id="wrapper">
 
 		<!-- Header -->
-		<header id="header">
-			<h1>Apparel</h1>
+		<header id="header" class="alt">
+			<span class="logo"><img style="width: 85px; height: 85px;" src="images/logo1.png" alt="" /></span>
+			<!-- <h1>Apparel</h1> -->
 			<p>We offer a variety of styles, colors, and materials, and we are always happy to receive your feedback and
 				suggestions.</p>
 		</header>
-
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="home.html">HOME</a></li>
+				<li><a href="apparel.html" class="active">APPAREL</a></li>
+				<li><a href="headwear.html">HEADWEAR</a></li>
+				<li><a href="accessories.html">ACCESSORIES</a></li>
+				<li><a href="techniques.html">TECHNIQUES</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
+			</ul>
+		</nav>
 		<!-- Main -->
 		<div id="main">
-
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class="image main"><img src="./images/long.png" alt="" /></span>
+				<!-- <span class="image main"><img src="./images/long.png" alt="" /></span> -->
+
 				<div id="list">
 					<!-- <h2 style="text-align: left;">T-shirt</h2>
 					<ul class="features" style="text-align: center;">
@@ -231,6 +242,14 @@
 			}
 		})();
 	</script>
+	<!-- Scripts -->
+	<!-- <script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script> -->
 </body>
 
 </html>
