--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 				<li><a href="#apparel">APPAREL</a></li>
 				<li><a href="#headwear">HEADWEAR</a></li>
 				<li><a href="#accessories">ACCESSORIES</a></li>
+				<li><a href="techniques.html">TECHNIQUES</a></li>
 			</ul>
 		</nav>
 
@@ -49,7 +50,7 @@
 						<p>Joyful Merch is a merchandise supplier specialized in the research, development and production of apparel and accessories. We are located in Dongguan with convenient transportation access. All of our products comply with international quality standards and are greatly appreciated in a variety of different markets throughout the world.</br>If you are interested in any of our products or would like to discuss a custom order, please feel free to contact us. We are looking forward to forming successful business relationships with new clients around the world in the near future.</br>Let's make merch joyful!<br /><br />
 							email by <a href="mailto:joy4merch@gmail.com">joy4merch@gmail.com</a></p>
 						<ul class="actions">
-							<li><a href="techniques.html" class="button">Techniques</a></li>
+							<li><a href="about.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<span class="image"><img src="images/logo.svg" alt="" /></span>
