update home .html

--- a/accessories.html
+++ b/accessories.html
@@ -20,17 +20,19 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<span class="logo"><img style="width: 85px; height: 85px;" src="images/logo1.png" alt="" /></span>
-			<p>Providing high-quality clothing, accessories, shoes, and jewelry for men, women, and kids.</br>We offer a wide range of products, including clothing, accessories, shoes, and jewelry, and we are always ready to serve you.</p>
+			<p>Providing high-quality clothing, accessories, shoes, and jewelry for men, women, and kids.</br>We offer a
+				wide range of products, including clothing, accessories, shoes, and jewelry, and we are always ready to
+				serve you.</p>
 		</header>
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
 				<li><a href="home.html">HOME</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
 				<li><a href="apparel.html">APPAREL</a></li>
 				<li><a href="headwear.html">HEADWEAR</a></li>
 				<li><a href="accessories.html" class="active">ACCESSORIES</a></li>
 				<li><a href="techniques.html">TECHNIQUES</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
 			</ul>
 		</nav>
 
@@ -99,7 +101,7 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; 2023, Joyful Merch Limited.</p>
+			<p class="copyright">&copy; 2025, Joyful Merch Limited.</p>
 			<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 		</footer>
 
@@ -117,111 +119,132 @@
 		(function name(params) {
 			let listData = {
 				"Accessories": [{
-					"img": "./images/accessories/1-slides.jpg",
+					"img": "./images/accessories/_1.jpg",
 					"title": "Slides",
-					"introduce": "introduce introduce introduce .introduce introduce ."
+					"introduce": ""
 				}, {
-					"img": "./images/accessories/1-slides.png",
+					"img": "./images/accessories/_2.jpg",
 					"title": "Slides"
 				}, {
-					"img": "./images/accessories/1-slippers.jpg",
-					"title": "Slippers",
-					"introduce": "introduce introduce introduce .introduce introduce ."
-				},{
-					"img": "./images/accessories/1-socks.jpg",
-					"title": "Socks"
+					"img": "./images/accessories/_3.jpg",
+					"title": "Slippers"
 				}, {
-					"img": "./images/accessories/1-socks.png",
-					"title": "Socks",
-					"introduce": "introduce introduce introduce .introduce introduce ."
-				},{
-					"img": "./images/accessories/2-backpack.jpg",
-					"title": "Backpack",
-					"introduce": "introduce introduce introduce .introduce introduce ."
+					"img": "./images/accessories/_4.jpg",
+					"title": "Jacquard Socks"
 				}, {
-					"img": "./images/accessories/2-drawstring-bag.jpg",
-					"title": "Drawstring bag"
+					"img": "./images/accessories/_5.jpg",
+					"title": "Jacquard Socks"
 				}, {
-					"img": "./images/accessories/2-Fanny-packs.jpg",
-					"title": "Fanny packs"
+					"img": "./images/accessories/_6.jpg",
+					"title": "Embroidery socks"
 				}, {
-					"img": "./images/accessories/2-shoulder-bags.png",
+					"img": "./images/accessories/_7.jpg",
+					"title": "Scarf"
+				}, {
+					"img": "./images/accessories/_8.jpg",
+					"title": "Backpack"
+				}, {
+					"img": "./images/accessories/_9.jpg",
 					"title": "Shoulder bags"
 				}, {
-					"img": "./images/accessories/2-tote.jpg",
-					"title": "Tote"
-				},{
-					"img": "./images/accessories/3-chenille-patches.jpg",
-					"title": "Chenille patches"
+					"img": "./images/accessories/_10.jpg",
+					"title": "Fanny packs"
 				}, {
-					"img": "./images/accessories/3-embroidery-patches.jpg",
+					"img": "./images/accessories/_11.jpg",
+					"title": "Tote"
+				}, {
+					"img": "./images/accessories/_12.jpg",
+					"title": "Drawstring bag"
+				}, {
+					"img": "./images/accessories/_13.jpg",
+					"title": "Makeup bag"
+				}, {
+					"img": "./images/accessories/_14.jpg",
+					"title": "Mug"
+				}, {
+					"img": "./images/accessories/_15.jpg",
+					"title": "Thermos Cup"
+				}, {
+					"img": "./images/accessories/_16.jpg",
 					"title": "Embroidery patches"
 				}, {
-					"img": "./images/accessories/3-printed-patches.jpg",
+					"img": "./images/accessories/_17.jpg",
+					"title": "Woven patches"
+				}, {
+					"img": "./images/accessories/_18.jpg",
+					"title": "Woven patches"
+				}, {
+					"img": "./images/accessories/_19.jpg",
 					"title": "Printed patches"
 				}, {
-					"img": "./images/accessories/3-woven-patches-1.jpg",
-					"title": "Woven patches"
-				}, {
-					"img": "./images/accessories/3-woven-patches-2.jpg",
-					"title": "Woven patches"
-				},{
-					"img": "./images/accessories/4-hard-enamel-pins.jpg",
-					"title": "Hard enamel pins"
-				}, {
-					"img": "./images/accessories/4-leather-keychain.jpg",
-					"title": "Leather keychain"
-				}, {
-					"img": "./images/accessories/4-leather-patches.jpg",
+					"img": "./images/accessories/_20.jpg",
 					"title": "Leather patches"
 				}, {
-					"img": "./images/accessories/4-PVC-patches.jpg",
+					"img": "./images/accessories/_21.jpg",
 					"title": "PVC patches"
 				}, {
-					"img": "./images/accessories/4-soft-enamel-pins.jpg",
+					"img": "./images/accessories/_22.jpg",
 					"title": "Soft enamel pins"
-				},{
-					"img": "./images/accessories/5-acrylic-keychain.jpg",
-					"title": "Acrylic keychain"
 				}, {
-					"img": "./images/accessories/5-embroidery-keychains.jpg",
-					"title": "Embroidery keychains"
+					"img": "./images/accessories/_23.jpg",
+					"title": "Hard enamel pins"
 				}, {
-					"img": "./images/accessories/5-metal-keychain.jpg",
-					"title": "Metal keychain"
+					"img": "./images/accessories/_24.jpg",
+					"title": "Chenille patches"
 				}, {
-					"img": "./images/accessories/5-PVC-keychain.jpg",
+					"img": "./images/accessories/_25.jpg",
+					"title": "Metal keychains"
+				}, {
+					"img": "./images/accessories/_26.jpg",
 					"title": "PVC keychain"
 				}, {
-					"img": "./images/accessories/5-woven-keychain.jpg",
+					"img": "./images/accessories/_27.jpg",
+					"title": "Acrylic keychain"
+				}, {
+					"img": "./images/accessories/_28.jpg",
+					"title": "Embroidery keychains"
+				}, {
+					"img": "./images/accessories/_29.jpg",
 					"title": "Woven keychain"
-				},{
-					"img": "./images/accessories/6-flag-1.jpg",
+				}, {
+					"img": "./images/accessories/_30.jpg",
+					"title": "Leather keychain"
+				}, {
+					"img": "./images/accessories/_31.jpg",
+					"title": "Stickers"
+				}, {
+					"img": "./images/accessories/_32.jpg",
+					"title": "Stickers"
+				}, {
+					"img": "./images/accessories/_33.jpg",
+					"title": "Stickers"
+				}, {
+					"img": "./images/accessories/_34.jpg",
 					"title": "Poster flag"
 				}, {
-					"img": "./images/accessories/6-flag-2.jpg",
+					"img": "./images/accessories/_35.jpg",
 					"title": "Poster flag"
 				}, {
-					"img": "./images/accessories/6-stickers-1.jpg",
-					"title": "Stickers"
-				}, {
-					"img": "./images/accessories/6-stickers-2.jpg",
-					"title": "Stickers"
-				}, {
-					"img": "./images/accessories/6-stickers-3.jpg",
-					"title": "Stickers"
-				},{
-					"img": "./images/accessories/7-Bracelets.jpg",
-					"title": "Bracelets"
-				}, {
-					"img": "./images/accessories/7-landyard.jpg",
+					"img": "./images/accessories/_36.jpg",
 					"title": "Landyard"
 				}, {
-					"img": "./images/accessories/7-wristbands.jpg",
+					"img": "./images/accessories/_37.jpg",
+					"title": "Wristband"
+				}, {
+					"img": "./images/accessories/_38.jpg",
 					"title": "Wristbands"
 				}, {
-					"img": "./images/accessories/8-embroidery-socks.jpg",
-					"title": "Embroidery socks"
+					"img": "./images/accessories/_39.jpg",
+					"title": "Bracelets"
+				}, {
+					"img": "./images/accessories/_40.jpg",
+					"title": "Folding fan"
+				}, {
+					"img": "./images/accessories/_41.jpg",
+					"title": "Beach towel"
+				}, {
+					"img": "./images/accessories/_42.jpg",
+					"title": "Playing Cards"
 				}]
 			};
 
