--- a/apparel.html
+++ b/apparel.html
@@ -21,18 +21,21 @@
 		<header id="header" class="alt">
 			<span class="logo"><img style="width: 85px; height: 85px;" src="images/logo1.png" alt="" /></span>
 			<!-- <h1>Apparel</h1> -->
-			<p>We offer a variety of styles, colors, and materials, and we are always happy to receive your feedback and
-				suggestions.</p>
+			<p>We can custom made Apparel with silkscreen printing/all over printing/digital printing, flat/3D
+				embroidery, chenille embroidery, glow in the dark embroidery/printing, embroidery with reflective
+				appliques, tufting stitches embroidery, sew embroidery/chenille embroidery backpatches.</br>We can
+				accept small orders with any difficult technical you might inquire and we offer a variety of styles,
+				colors, and fabrics, and we are always happy to receive your feedback and suggestions.</p>
 		</header>
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
 				<li><a href="home.html">HOME</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
 				<li><a href="apparel.html" class="active">APPAREL</a></li>
 				<li><a href="headwear.html">HEADWEAR</a></li>
 				<li><a href="accessories.html">ACCESSORIES</a></li>
 				<li><a href="techniques.html">TECHNIQUES</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
 			</ul>
 		</nav>
 		<!-- Main -->
@@ -100,7 +103,7 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; 2023, Joyful Merch Limited.</p>
+			<p class="copyright">&copy; 2025, Joyful Merch Limited.</p>
 			<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 		</footer>
 
@@ -117,84 +120,87 @@
 	<script type="text/javascript">
 		(function name(params) {
 			let listData = {
-				"Apparels": [{
-					"img": "./images/apparel/1-t-shirt-1.jpg",
+				"Apparel": [{
+					"img": "./images/apparel/_1.jpg",
 					"title": "T-shirt",
 					"introduce": ""
 				}, {
-					"img": "./images/apparel/1-t-shirt-2.jpg",
+					"img": "./images/apparel/_2.jpg",
 					"title": "T-shirt"
 				}, {
-					"img": "./images/apparel/1-Polo-shirt.jpg",
-					"title": "Polo shirt"
+					"img": "./images/apparel/_3.jpg",
+					"title": "Polo Shirt"
 				}, {
-					"img": "./images/apparel/1-long-shirt.jpg",
-					"title": "Long shirt"
+					"img": "./images/apparel/_4.jpg",
+					"title": "Tank"
 				}, {
-					"img": "./images/apparel/1-sweatshirt.jpg",
+					"img": "./images/apparel/_5.jpg",
+					"title": "Jersey"
+				}, {
+					"img": "./images/apparel/_6.jpg",
+					"title": "Long Shirt"
+				}, {
+					"img": "./images/apparel/_7.jpg",
 					"title": "Sweatshirt"
 				}, {
-					"img": "./images/apparel/2-hoodie-03-1.jpg",
-					"title": "Hoodie",
+					"img": "./images/apparel/_8.jpg",
+					"title": "Sweatshirt"
 				}, {
-					"img": "./images/apparel/2-hoodie-03-3.jpg",
+					"img": "./images/apparel/_9.jpg",
 					"title": "Hoodie"
 				}, {
-					"img": "./images/apparel/2-zipper-hoodie.jpg",
+					"img": "./images/apparel/_10.jpg",
+					"title": "Hoodie"
+				}, {
+					"img": "./images/apparel/_11.jpg",
 					"title": "Zipper hoodie"
 				}, {
-					"img": "./images/apparel/2-sweatshirt.jpg",
-					"title": "Sweatshirt"
+					"img": "./images/apparel/_12.jpg",
+					"title": "Windbreaker"
 				}, {
-					"img": "./images/apparel/2-jacket.jpg",
+					"img": "./images/apparel/_13.jpg",
 					"title": "Jacket"
 				}, {
-					"img": "./images/apparel/3-bomber-jacket-1.jpg",
+					"img": "./images/apparel/_14.jpg",
 					"title": "Bomber jacket"
 				}, {
-					"img": "./images/apparel/3-bomber-jacket-2.jpg",
-					"title": "Bomber jacket"
+					"img": "./images/apparel/_15.jpg",
+					"title": "Denim Jacket"
 				}, {
-					"img": "./images/apparel/3-jacket.jpg",
-					"title": "Jacket"
-				}, {
-					"img": "./images/apparel/3-short-1.jpg",
-					"title": "Short"
-				}, {
-					"img": "./images/apparel/3-short-2.jpg",
-					"title": "Short"
-				}, {
-					"img": "./images/apparel/4-jogger.jpg",
-					"title": "Jogger"
-				}, {
-					"img": "./images/apparel/4-leggings.jpg",
-					"title": "Leggings"
-				}, {
-					"img": "./images/apparel/4-sweater-1.jpg",
+					"img": "./images/apparel/_16.jpg",
 					"title": "Christmas Sweater"
 				}, {
-					"img": "./images/apparel/4-sweater-2.jpg",
+					"img": "./images/apparel/_17.jpg",
 					"title": "Christmas Sweater"
 				}, {
-					"img": "./images/apparel/4-sweater-3.jpg",
+					"img": "./images/apparel/_18.jpg",
 					"title": "Sweater"
 				}, {
-					"img": "./images/apparel/5-swimwear-1.jpg",
+					"img": "./images/apparel/_19.jpg",
 					"title": "Swimwear"
 				}, {
-					"img": "./images/apparel/5-swimwear-2.jpg",
-					"title": "Swimwear"
+					"img": "./images/apparel/_20.jpg",
+					"title": "Swimwear set"
 				}, {
-					"img": "./images/apparel/5-swimwear-3.jpg",
-					"title": "Swimwear"
+					"img": "./images/apparel/_21.jpg",
+					"title": "Bikini"
 				}, {
-					"img": "./images/apparel/6-hawaii-shirt.jpg",
-					"title": "Hawaii shirt"
+					"img": "./images/apparel/_22.jpg",
+					"title": "Short"
 				}, {
-					"img": "./images/apparel/5-legging-1.jpg",
+					"img": "./images/apparel/_23.jpg",
+					"title": "Short"
+				}, {
+					"img": "./images/apparel/_24.jpg",
+					"title": "Jogger"
+				}, {
+					"img": "./images/apparel/_25.jpg",
 					"title": "Legging"
 				}, {
-					"img": "./images/apparel/5-legging-2.jpg",
+					"img": "./images/apparel/_26.jpg",
+					"title": "Legging"
+				}, {
+					"img": "./images/apparel/_27.jpg",
 					"title": "Legging"
 				}]
 			};
