--- a/headwear.html
+++ b/headwear.html
@@ -26,11 +26,11 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="home.html">HOME</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
 				<li><a href="apparel.html">APPAREL</a></li>
 				<li><a href="headwear.html"  class="active">HEADWEAR</a></li>
 				<li><a href="accessories.html">ACCESSORIES</a></li>
 				<li><a href="techniques.html">TECHNIQUES</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
 			</ul>
 		</nav>
 
@@ -99,7 +99,7 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; 2023, Joyful Merch Limited.</p>
+			<p class="copyright">&copy; 2025, Joyful Merch Limited.</p>
 			<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 		</footer>
 
@@ -116,96 +116,87 @@
 	<script type="text/javascript">
 		(function name(params) {
 			let listData = {
-				"Headwears": [{
-					"img": "./images/headwear/1-snapback-1.jpg",
-					"title": "Snapback",
+				"Headwear": [{
+					"img": "./images/headwear/_1.jpg",
+					"title": "Snapback Hat",
 					"introduce": ""
 				}, {
-					"img": "./images/headwear/1-snapback-2.jpg",
-					"title": "Snapback"
+					"img": "./images/headwear/_2.jpg",
+					"title": "Snapback Hat"
 				}, {
-					"img": "./images/headwear/1-snapback-3.jpg",
-					"title": "Snapback"
+					"img": "./images/headwear/_3.jpg",
+					"title": "Snapback Hat"
 				}, {
-					"img": "./images/headwear/1-snapback-4.jpg",
-					"title": "Snapback"
+					"img": "./images/headwear/_4.jpg",
+					"title": "5 Panel Hat"
 				}, {
-					"img": "./images/headwear/1-5-panel-hat.png",
-					"title": "5 Panel hat"
+					"img": "./images/headwear/_5.jpg",
+					"title": "Camper Hat"
 				}, {
-					"img": "./images/headwear/2-baseball-hat-1.jpg",
-					"title": "Baseball hat"
+					"img": "./images/headwear/_6.jpg",
+					"title": "Trucker Hat"
 				}, {
-					"img": "./images/headwear/2-baseball-hat-2.jpg",
-					"title": "Baseball hats"
+					"img": "./images/headwear/_7.jpg",
+					"title": "Baseball Hat"
 				}, {
-					"img": "./images/headwear/2-dad-hat-1.jpg",
-					"title": "Dad hat"
+					"img": "./images/headwear/_8.jpg",
+					"title": "Baseball Hat"
 				}, {
-					"img": "./images/headwear/2-dad-hat-2.jpg",
-					"title": "Dad hats"
+					"img": "./images/headwear/_9.jpg",
+					"title": "Dad Hat"
 				}, {
-					"img": "./images/headwear/2-dad-hat-3.jpg",
-					"title": "Dad hat"
+					"img": "./images/headwear/_10.jpg",
+					"title": "Dad Hats"
 				}, {
-					"img": "./images/headwear/3-bucket-hat-1.jpg",
-					"title": "Bucket hat"
+					"img": "./images/headwear/_11.jpg",
+					"title": "Trucker Hats"
 				}, {
-					"img": "./images/headwear/3-bucket-hat-2.jpg",
-					"title": "Bucket hat"
+					"img": "./images/headwear/_12.jpg",
+					"title": "Trucker Hat"
 				}, {
-					"img": "./images/headwear/3-trucker-hat-1.png",
-					"title": "Trucker hats"
+					"img": "./images/headwear/_13.jpg",
+					"title": "Visor Hat"
 				}, {
-					"img": "./images/headwear/3-trucker-hat-2.png",
-					"title": "Trucker hat"
+					"img": "./images/headwear/_14.jpg",
+					"title": "Bucket Hat"
 				}, {
-					"img": "./images/headwear/3-trucker-hat-3.png",
-					"title": "Mesh hat"
+					"img": "./images/headwear/_15.jpg",
+					"title": "Bucket Hat"
 				}, {
-					"img": "./images/headwear/4-beanies-1.jpg",
+					"img": "./images/headwear/_16.jpg",
+					"title": "Beret"
+				}, {
+					"img": "./images/headwear/_17.jpg",
+					"title": "PomPom Beanie"
+				}, {
+					"img": "./images/headwear/_18.jpg",
+					"title": "PomPom Beanie"
+				}, {
+					"img": "./images/headwear/_19.jpg",
 					"title": "Beanie"
 				}, {
-					"img": "./images/headwear/4-beanies-2.jpg",
-					"title": "Beanie"
+					"img": "./images/headwear/_20.jpg",
+					"title": "Beanies"
 				}, {
-					"img": "./images/headwear/4-bucket-hat.jpg",
-					"title": "Bucket hat"
+					"img": "./images/headwear/_21.jpg",
+					"title": "Beanies"
 				}, {
-					"img": "./images/headwear/4-pompom-beanie-1.jpg",
-					"title": "POMPOM Beanie"
+					"img": "./images/headwear/_22.jpg",
+					"title": "Short Beanies"
 				}, {
-					"img": "./images/headwear/4-pompom-beanie-2.jpg",
-					"title": "POMPOM Beanie"
-				}, {
-					"img": "./images/headwear/5-bandana-1.jpg",
-					"title": "Bandana"
-				}, {
-					"img": "./images/headwear/5-bandana-2.jpg",
-					"title": "Bandana"
-				}, {
-					"img": "./images/headwear/5-bandana-3.jpg",
-					"title": "Bandana"
-				}, {
-					"img": "./images/headwear/4-beanies-3.jpg",
-					"title": "Beanie"
-				}, {
-					"img": "./images/headwear/4-short-beanie.png",
-					"title": "Short Beanie"
-				}, {
-					"img": "./images/headwear/5-balaclava.png",
+					"img": "./images/headwear/_23.jpg",
 					"title": "Balaclava"
 				}, {
-					"img": "./images/headwear/5-panel-hat.jpg",
-					"title": "Panel hat"
+					"img": "./images/headwear/_24.jpg",
+					"title": "Neck Gaiter"
 				}, {
-					"img": "./images/headwear/5-visor-hat.png",
-					"title": "Visor hat"
+					"img": "./images/headwear/_25.jpg",
+					"title": "Bandana"
 				}, {
-					"img": "./images/headwear/5-scarf.jpg",
-					"title": "Scarf"
+					"img": "./images/headwear/_26.jpg",
+					"title": "Bandana"
 				}, {
-					"img": "./images/headwear/5-straw-hat.jpg",
+					"img": "./images/headwear/_27.jpg",
 					"title": "Straw hat"
 				}]
 			};
