--- a/techniques.html
+++ b/techniques.html
@@ -26,11 +26,11 @@
 		<nav id="nav">
 			<ul>
 				<li><a href="home.html">HOME</a></li>
+				<li><a href="about.html">ABOUT US</a></li>
 				<li><a href="apparel.html">APPAREL</a></li>
 				<li><a href="headwear.html">HEADWEAR</a></li>
 				<li><a href="accessories.html">ACCESSORIES</a></li>
 				<li><a href="techniques.html" class="active">TECHNIQUES</a></li>
-				<li><a href="about.html">ABOUT US</a></li>
 			</ul>
 		</nav>
 
@@ -40,7 +40,7 @@
 			<!-- Content -->
 			<section id="content" class="main">
 				<!-- <span class="image main"><img src="./images/long.png" alt="" /></span> -->
-				<h2 style="text-align: left;">Embroidery</h2>
+				<h2 style="text-align: left;margin: 0 0 0 0;">Embroidery</h2>
 				<div class="row">
 					<div style="width: 50%;"><img style="width: 100%;" src="images/techniques/embroidery.jpg" alt="">
 					</div>
@@ -48,7 +48,7 @@
 						<p class="content">
 							</br>Embroidery is always combination of old school and new styles.
 							</br>
-							Joy4 Merch offers the embroidery techs as follows:
+							Joyful Merch offers the embroidery techs as follows:
 							</br>
 							- flat embroidery
 							</br>
@@ -62,7 +62,7 @@
 						</p>
 					</div>
 				</div>
-				<h2 style="text-align: left;">Jacquard</h2>
+				<h2 style="text-align: left;margin: 2em 0 0 0;">Printing</h2>
 				<div class="row">
 					<div style="width: 50%;"><img style="width: 100%;" src="images/techniques/printing.jpg" alt="">
 					</div>
@@ -70,7 +70,7 @@
 						<p class="content">
 							</br>Printing is popular!
 							</br>
-							Joy4 Merch offers printing techs as follows:
+							Joyful Merch offers printing techs as follows:
 							</br>
 							- screen printing
 							</br>
@@ -86,13 +86,13 @@
 						</p>
 					</div>
 				</div>
-				<h2 style="text-align: left;">Jacquard</h2>
+				<h2 style="text-align: left;margin: 2em 0 0 0;">Jacquard</h2>
 				<div class="row">
 					<div style="width: 50%;"><img style="width: 100%;" src="images/techniques/jacquard.jpg" alt="">
 					</div>
 					<div style="width: 50%;">
 						<p class="content">
-							</br>Jacquard is widely used. Joy4 Merch offer you as follows:
+							</br>Jacquard is widely used. Joyful Merch offer you as follows:
 							</br>
 							- sweaters
 							</br>
@@ -153,7 +153,7 @@
 					<!-- <li><a href="#" class="icon brands fa-dribbble alt"><span class="label">Dribbble</span></a></li> -->
 				</ul>
 			</section>
-			<p class="copyright">&copy; 2023, Joyful Merch Limited.</p>
+			<p class="copyright">&copy; 2025, Joyful Merch Limited.</p>
 			<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 		</footer>
 
